# ttest

./: LICENSE  pyproject.toml  ttest_to_lr.ipynb  ttest_to_lr.slides.html
.ipynb_checkpoints/: ttest_to_lr-checkpoint.ipynb
