[tool.poetry]
name = "ttest"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
ipython = "^8.4.0"
jupyter = "^1.0.0"
numpy = "^1.23.1"
pandas = "^1.4.3"
rise = "^5.7.1"
scipy = "^1.8.1"
seaborn = "^0.11.2"
ipywidgets = "^7.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
